--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -442,7 +442,7 @@ input.kr-date {
   box-sizing: border-box;
 }
 #avatars{
-  height: 650px;
+  height: 630px;
   overflow-y: auto;
   position: relative;
   display: block;
@@ -457,8 +457,11 @@ input.kr-date {
 
 .avatars > img {
 
-  padding-left: 30px;
-  padding-right: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 230px;
+  height: 280px;
+
 }
 
 .avatars > input + img{
@@ -477,12 +480,6 @@ input.kr-date {
       margin-top: 10px;
 }
 
-.kr-hero-image {
-  width: 250px;
-   height: 300px;
-}
-
-
 #chlopiec {
   position: relative;
   display: inline-block;
@@ -490,6 +487,7 @@ input.kr-date {
 
 #gender {
   width: 11%;
+  margin-right: 15px;
 }
 
 #girl {
