--- a/sass/_dziecko_menu.scss
+++ b/sass/_dziecko_menu.scss
@@ -13,7 +13,7 @@ ul.menu {
 	li {
 	// position: absolute;
 	text-align: center;
-	font: 4rem $font_title_family;
+	font: 5rem $font_title_family;
 	color: $color_back_kid;
 	border-radius: 100%;
 	border: 3px white solid;
@@ -29,13 +29,13 @@ ul.menu {
 		}
 	}
 
-	.menu-misje {background: url(../assets/check2.svg) top 30% center no-repeat; background-size: 60%;
+	.menu-misje {background: url(../assets/mission.svg) top 30% center no-repeat; background-size: 60%;
 		&:hover{background-color: darken($color_undone,10%);}}}
-	.menu-odznaki {background: url(../assets/medal.svg) top 30% center no-repeat; background-size: 60%;
+	.menu-odznaki {background: url(../assets/odznaki.png) top 20% center no-repeat; background-size: 80%;
 		&:hover{background-color: darken($color_done,10%);}}
 	.menu-bohater{background: url(../assets/bohater.png) top 30% center no-repeat; background-size: 40%;
 		&:hover{background-color: darken($color_wait,10%);}}
-	.menu-nagrody{background: url(../assets/giftbox.svg) top 30% center no-repeat; background-size: 50%;
+	.menu-nagrody{background: url(../assets/gift.svg) top 30% center no-repeat; background-size: 50%;
 		&:hover{background-color: darken($color_base,10%);}}
 
 	
