--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -76,9 +76,9 @@ header{
 }
 
 .kid header{
-	//background-color: $color_back_kid;
+	background-color: $color_back_kid;
 	.header-banner {
-		//background-color: mix($color_base,$color_back_kid);
+		background-color: mix($color_base,$color_back_kid);
 		background-color: $color_base;
 		color: $color_text_kid;
 		//text-shadow: 0 0 10px $color_back_kid;//@include stroke(3,$color_back_kid);		
@@ -103,7 +103,7 @@ header{
 	}
 }
 .parent header{
-	//background-color: $color_back_parent;
+	background-color: $color_back_parent;
 	.header-banner {
 		background-color: white;
 		color: $color_base;
