--- a/sass/_dziecko_menu.scss
+++ b/sass/_dziecko_menu.scss
@@ -14,7 +14,7 @@ ul.menu {
 	// position: absolute;
 	text-align: center;
 	font: 5rem $font_title_family;
-	color: $color_back_kid;
+	color: white;
 	border-radius: 100%;
 	border: 3px white solid;
 	
@@ -23,19 +23,19 @@ ul.menu {
 			display: inline-block;
 			width: 100%;
 			position: absolute;
-			bottom: 10%;
+			bottom: 20%;
 			left: 0px;
 			z-index:500;
 		}
 	}
 
-	.menu-misje {background: url(../assets/mission.svg) top 30% center no-repeat; background-size: 60%;
+	.menu-misje {background: url(../assets/mission.svg) top 30% center no-repeat; background-size: 50%;
 		&:hover{background-color: darken($color_undone,10%);}}}
-	.menu-odznaki {background: url(../assets/odznaki.png) top 20% center no-repeat; background-size: 80%;
+	.menu-odznaki {background: url(../assets/odznaki.png) top 20% center no-repeat; background-size: 90%;
 		&:hover{background-color: darken($color_done,10%);}}
 	.menu-bohater{background: url(../assets/bohater.png) top 30% center no-repeat; background-size: 40%;
 		&:hover{background-color: darken($color_wait,10%);}}
-	.menu-nagrody{background: url(../assets/gift.svg) top 30% center no-repeat; background-size: 50%;
+	.menu-nagrody{background: url(../assets/gift.svg) top 30% center no-repeat; background-size: 40%;
 		&:hover{background-color: darken($color_base,10%);}}
 
 	
