--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -28,6 +28,7 @@ header{
 		
 		font: $font_title_size $font_title_family;
 		text-align: center;
+		padding-left: 5%;
 		line-height: $header_banner_height+1.0rem;
 		vertical-align: middle;
 	}
@@ -54,20 +55,20 @@ header{
 		background-color: $color_back_parent;
 		li{
 			display:block;
-			height: 9vh;
+			height: 11vh;
 			width: 100%;
 			font: $font_big_size $font_reg_family;
-			line-height: 9vh; 
+			line-height: 11vh; 
 			color: white;
 			text-align: center;
 			margin-bottom: 5px;
 		}
 		a{	
 			display:block;
-			height: 9vh;
+			height: 11vh;
 			width: 100%;
 			font: $font_big_size $font_reg_family;
-			line-height: 9vh;
+			line-height: 11vh;
 			color: white !important; 
 		}
 		.nav-main li {	background-color: $color_text_parent;}
