--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -40,6 +40,7 @@ a {
 
 @import '_background';
 
+@import '_kr_style';
 
 // FORMS
 
@@ -298,185 +299,3 @@ input[type=checkbox] {
 	animation:spin 5s linear 1;
 }
 
-
-.kr-input {
-  margin-top: 1.0rem;
-  margin-right: 1.0rem;
-  position: relative;
-  cursor: pointer;
-  width: 4.0rem;
-  height: 4.0rem;
-  border: 2px solid $color_base;
-  display: inline-block;
-
-  & + label {
-    position: relative;
-    display: inline-block;
-    font: $font_mid_size $font_reg_family;  
-    width: 10%;
-    vertical-align: bottom;     
-
-}}
-
-
-input.kr-date {
-  width: 80%;
-  margin: 2.0rem auto;
-  padding: 2.0rem;
-  border-radius: 2.0rem;
-}
-
-
-
-.kr-container {
-    height: 700px;
-    border: 4px solid #008aff;
-    color: white;
-    padding: 3.0rem;
-    width: 900px;
-    margin: 5.0rem auto;
-    font: 4rem "Lato",sans_serif;
-    text-align: center;
-    border-radius: 2rem;
-    cursor: pointer;
-    background-color: white;
-}
-
-
-.kr-label {
-  top: -60px;
-  border-radius: 2rem;
-  border: 2px solid #008aff;
-  position: relative;
-    background-color: #008aff;
-    text-align: center;
-  margin-bottom: 0px;
-}
-
-
-.kr-accept, .kr-present, .kr-plus {
-  height: 100px;
-  width: 100px;
-  margin-left: 80px;
-  text-align: center;
-  font: 3rem $font_reg_family;
-  color: $color_back_kid;
-  border-radius: 100%;
-  float: left;
-  font: 3rem "Lato",sans_serif;
-
-}
-
-
-#present {
-  float: left;
-  margin-right: 80px;
-  margin-left: 400px;
-}
-
-#kr-progress {
-  clear: both;
-  margin: 50px;
-  margin-top: 270px;
-}
-
-
-.kr-enlarge:hover {
-  transform: scale(1.2);
-}
-
-.kr-enlarge {
-  transition: all 1s;
-  transform-origin: 50% 50%;
-}
-
-#kr-plus {
-  margin-bottom: 30px;
-}
-
-.kr-accept p {
-
-    position: relative;
-    left: -20%;
-    display: block;
-    width: 140%;
-    height: 9.6rem;
-    font: 3.2rem "Lato",sans_serif;
-    text-align: center;
-
-    }
-
- .kr-present p {
-    position: relative;
-    left: -20%;
-    display: block;
-    width: 140%;
-    font: 3.2rem "Lato",sans_serif;
-    text-align: center;
- }
-
- .kr-plus p {
-    position: relative;
-    left: -20%;
-    display: block;
-    width: 140%;
-    font: 3.2rem "Lato",sans_serif;
-    text-align: center;
- }
-
-* {
-  box-sizing: border-box;
-}
-#avatars{
-  height: 630px;
-  //overflow-y: auto;
-  position: relative;
-  display: block;
-  width: 80%;
-  margin: 2.0rem auto;
-
-}
-.avatars > input{
-  display: none;
-  padding: none;
-}
-
-.avatars > img {
-
-  margin-left: 15px;
-  margin-right: 15px;
-  //width: 230px;
-  height: 280px;
-  padding: 20px;
-
-}
-
-.avatars > input + img{
-  cursor: pointer;
-  border: 2px solid transparent;
-}
-
-.avatars > input:checked + img{
-  border: 2px solid $color_base;
-  border-radius: 2.0rem; 
-  background-color: white;
-}
-
-.hero {
-      font: 10rem "IntroRustH1-Base",cursive;
-      margin-top: 10px;
-}
-
-#chlopiec {
-  position: relative;
-  display: inline-block;
-}
-
-#gender {
-  width: 11%;
-  margin-right: 15px;
-}
-
-#girl {
-    width: 10%;
-}
