--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -1,35 +1,24 @@
 // large header baner
 .title-banner{
 	position: relative;
-	top: 0px;
-	left: 0px;
 	width: 100%;
 	text-align: center;
 	
-
 	.logo {
-		position: absolute;
-		top: 0;
-		left: 40vw;
-		width: 20vw;
-		height: 20vw;
+		position: relative;
+		height: 30.0rem;
 	}
 
 	h1{
-		padding-top: 20vw;
 		font: 1.2*$font_title_size $font_title_family;
 		color: $color_text_kid;
 		text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.3);
-
-
 	}
 
 	.font-skew {
 		-moz-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
 		-webkit-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
 		-ms-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
-		margin-bottom: 0rem;
-		padding-top: 0px;
 	  }
 }	
 
@@ -37,26 +26,25 @@
   @media (orientation: landscape){  
 
 	.title-banner {
-		top: 0px;
-		text-align: center;
+
 		.logo {
-			top: 0vw;
+			position:absolute;
+			top: 0;
 			left: $odznaki_right;
 		}
-		.font-skew { 
-			margin-bottom: 0;
-		}
 	}
-
 }
 
-  
-
+ 
 .title-container {
 	position: relative;
 	width: 100%;
 	text-align: center;
 
+
+
+
+	
 	form.enter {
 		display: inline-block;
 
