--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -142,6 +142,36 @@ button{
 	}
 }
 
+input[type="radio"] { display: none;}
+
+			input[type='radio'] + label.double {
+				display:inline-block;
+        width:40%;
+				border: 2px solid $color_base;
+				color: $color_dark_grey;
+        vertical-align: middle;
+        cursor: pointer;
+        height: $input_height;
+        font: $font_mid_size $font_reg_family;
+        line-height: $input_height;
+        text-align: center;
+        background-color: white;
+			}
+
+
+			input[type='radio'] + label.double:first-of-type{
+				border-bottom-left-radius: 20px;
+				border-top-left-radius: 20px;
+				border-right: none;
+			}
+			input[type='radio'] + label.double:last-of-type{
+				border-bottom-right-radius: 20px;
+				border-top-right-radius: 20px;
+			}
+			input[type='radio']:checked + label.double {
+				background-color:$color_base;
+        color: white;
+        border-color: white;}
 
 input[type=checkbox] {
 	margin-top: 1.0rem;
