--- a/sass/_kr_style.scss
+++ b/sass/_kr_style.scss
@@ -29,12 +29,11 @@ input.kr-date {
 
 
 
-.kr-container {
-    height: 700px;
+.kid-container {
+  //  height: 700px;
     border: 4px solid #008aff;
     color: white;
-    padding: 3.0rem;
-    width: 900px;
+    width: 80%;
     margin: 5.0rem auto;
     margin-bottom: 7.0rem;
     font: 4rem "Lato",sans_serif;
@@ -44,28 +43,48 @@ input.kr-date {
     background-color: white;
 }
 
-.kr-label {
-  color: white !important;
+.kid-label {
   top: -60px;
+  color: white !important;
   border-radius: 2rem;
-  border: 2px solid #008aff;
+  border: 2px solid $color_base;
   position: relative;
-  background-color: #008aff;
+  background-color: $color_base;
   text-align: center;
-  margin-bottom: 0px;
-  font: 4rem "Lato",sans_serif;
+  padding: 10px;
+  font: 5.0rem $font_title_family;
+  width: 60%;
+  margin: auto;
+  &::after{
+        content: '';
+        height: 100%;
+        width: 10%;
+        position: absolute;
+        top: 0px;
+        right: 5%;
+        background: url(../assets/login.svg) center center no-repeat; background-size: 100%;
+      }
 }
 
-.kr-accept, .kr-present, .kr-plus {
+.kid-icon {
+  margin: 3rem 5%;
+  width: 34%;
+  background-color: yellow;
+  display: inline-block;
+  
+  img {
+    width: 80%;
+  }
+}
+
+.kid-accept, .kr-present, .kr-plus {
   height: 100px;
   width: 100px;
   margin-left: 80px;
   text-align: center;
   font: 3rem $font_reg_family;
   color: $color_back_kid;
-  border-radius: 100%;
   float: left;
-  font: 3rem "Lato",sans_serif;
 
 }
 
