--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -315,12 +315,12 @@ input[type=checkbox] {
 
 
  
-/* IE8- CSS hack */
-@media \0screen\,screen\9 {
-    .gradient {
-        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffec0500",endColorstr="#ffce1802",GradientType=0);
-    }
-}
+// /* IE8- CSS hack */
+// @media \0screen\,screen\9 {
+//     .gradient {
+//         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffec0500",endColorstr="#ffce1802",GradientType=0);
+//     }
+// }
 
 .rotate {
 
