--- a/sass/_kr_style.scss
+++ b/sass/_kr_style.scss
@@ -36,7 +36,7 @@ input.kr-date {
     width: 80%;
     margin: 5.0rem auto;
     margin-bottom: 7.0rem;
-    font: 4rem "Lato",sans_serif;
+    font: 4rem $font_reg_family;
     text-align: center;
     border-radius: 2rem;
     cursor: pointer;
