--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -204,7 +204,8 @@ input[type=checkbox] {
 
 .container {
 	position: relative;
-	width: 100%;
+  width: 100%;
+  background-color: red;
 	top: $header_height;
 	left: 0px;
 	text-align: center;
