menu bez progress bar

--- a/sass/_kr_style.scss
+++ b/sass/_kr_style.scss
@@ -30,6 +30,7 @@ input.kr-date {
 
 
 .kid-container {
+  position:relative;
   //  height: 700px;
     border: 4px solid #008aff;
     color: white;
