--- a/sass/_circles.scss
+++ b/sass/_circles.scss
@@ -203,3 +203,10 @@ li.circle-mid {
 	transform-origin: 50% 50%;
 	&:hover{transform: scale(1.2);}
 }
+
+a {
+	.plus{
+	font: 4em $font_reg_family;
+	line-height: $mission_mid_size;
+	}
+}
