Poprawiony dziecko_menu header

--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -23,6 +23,13 @@
 	  }
 }	
 
+.title-banner-landscape {
+	.logo {
+		position:absolute;
+		top: 0;
+		left: $odznaki_right;
+	}
+}
 
   @media (orientation: landscape){  
 
