Dodane media querries do rodzic_menu - jezeli ekran jest poziomy to kid_container pokaze sie jeden obok drugiego

--- a/sass/_rodzic_menu.scss
+++ b/sass/_rodzic_menu.scss
@@ -14,6 +14,14 @@
 
 }
 
+@media (min-width: 1200px) and (orientation: landscape){  
+  .kid-container {
+    display: inline-block;
+    width: 40%;
+    margin: 5.0rem 2%;
+  }
+}
+
 .total-progress {
   margin: 20px auto;
   width: 100%;
@@ -51,7 +59,7 @@
 
 .kid-icon {
   margin: 3rem 5%;
-  width: 34%;
+  width: 25%;
   display: inline-block;
   vertical-align: top;
   img {
