Pierwsza próba ekranu startowego - kolejne sekcje przewijane

--- a/sass/_rodzic_menu.scss
+++ b/sass/_rodzic_menu.scss
@@ -19,7 +19,12 @@
     display: inline-block;
     width: 40%;
     margin: 5.0rem 2%;
+
+    .kid-icon {
+      width:35%;
+    }
   }
+
 }
 
 .total-progress {
