--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -24,11 +24,16 @@
 }	
 
 .title-banner-landscape {
+
 	.logo {
 		position:absolute;
 		top: 0;
 		left: $odznaki_right;
 	}
+
+	padding-left: 30.0rem;
+	padding-top: 5.0rem;
+
 }
 
   @media (orientation: landscape){  
@@ -76,3 +81,147 @@
 	}
 }
 
+section.page-container {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	font: $font-big-size $font-reg-family;
+  }
+
+  section.half-page-container {
+	position: relative;
+	width: 100%;
+	height: 50vh;
+	font: $font-big-size $font-reg-family;
+  }
+
+a.scrolling {
+	//miejsce na strzałkę w dół
+	padding-top: 80px;
+
+	position: absolute;
+	bottom: 1.0rem;
+	left: 0px;
+	text-align: center;
+	z-index: 2;
+	display: block;
+	width: 100%;
+	-webkit-transform: translate(0, -50%);
+	transform: translate(0, -50%);
+	letter-spacing: .1em;
+	transition: opacity .3s;
+	&:hover {
+		opacity: .5;
+	  }
+	  &.scrolling-reverse{
+		span {
+			border-right: 2px solid #fff;
+			border-top: 2px solid #fff;
+			border-left: none;
+			border-bottom: none;
+		}
+		}
+	span {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		width: 4.0rem;
+		height: 4.0rem;
+		margin-left: -2.0rem;
+		border-left: 2px solid #fff;
+		border-bottom: 2px solid #fff;
+		-webkit-transform: rotate(-45deg);
+		transform: rotate(-45deg);
+		-webkit-animation: sdb05 1.5s infinite;
+		animation: sdb05 1.5s infinite;
+	  }
+	  @-webkit-keyframes sdb05 {
+		0% {
+		  -webkit-transform: rotate(-45deg) translate(0, 0);
+		  opacity: 0;
+		}
+		50% {
+		  opacity: 1;
+		}
+		100% {
+		  -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+		  opacity: 0;
+		}
+	  }
+	  @keyframes sdb05 {
+		0% {
+		  transform: rotate(-45deg) translate(0, 0);
+		  opacity: 0;
+		}
+		50% {
+		  opacity: 1;
+		}
+		100% {
+		  transform: rotate(-45deg) translate(-20px, 20px);
+		  opacity: 0;
+		}
+	}
+}
+
+.half-page-container{
+	padding:4.0rem;
+	p{
+		padding: 2.0rem;
+	}
+}
+
+ul.green-circle{
+	padding: 2.0rem;
+	li{padding: 2.0rem; padding-left: 6.0rem; position: relative;}
+	li:before{
+		content: ''; 
+		position: absolute;
+		left:0rem;
+		width: 40px;
+		height: 40px;
+		background: url(../assets/mission.svg) center center no-repeat; background-size:100%;
+	}
+}
+
+.logo-banner {
+	width: 100%;
+	height: 10vh;;
+	position: absolute;
+	top: -10vh;
+	left:0px;
+	text-align: right;
+	background: $color-base url(../assets/logo.png) left center no-repeat; 
+	font: 1.2*$font_title_size $font_title_family;
+	color:white;
+	.font-skew {
+		-moz-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
+		-webkit-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
+		-ms-transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
+		transform: matrix( 0.99026806874157,-0.13917310096007,0.13917310096007,0.99026806874157,0,0);
+	  }
+}
+
+p.move-down{padding-top: 12.0rem;}
+ul.blue-square{
+	padding: 2.0rem;
+	li{padding: 2.0rem; }
+	li:before{
+		content: '\25A0'; 
+		padding-right: 8px;
+		color: $color_base; 
+	}
+}
+
+#section01 {
+	.circles {
+		position: absolute;
+	}
+}
+
+#section02 { background-color: white;}
+
+#section03 { background-color: $color_back_kid; color: white;}
+
+#section04 { background-color: white;}
+
+#section05 { background-color: $color_back_kid;}
