--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -1,7 +1,7 @@
 @import 'reset';
 @import '_zmienne';
 
-body.kid{background-color: $color_back_kid}
+body.kid{background: $color_back_kid url(../assets/background.svg) center center no-repeat; background-size: 100%;}
 //body.kid{background: $color_back_kid url(../assets/back_circles.svg) top center no-repeat; background-size: 100%;}
 body.parent{background-color: $color_back_parent;}
 
