--- a/sass/_zmienne.scss
+++ b/sass/_zmienne.scss
@@ -1,7 +1,7 @@
 //colors definition
 $color_base:#008aff; // base color, neutral for missions
 $color_base2: #C0392B; // second base color (logo etc.)
-$color_back_kid: #0C1A3F; // background for kids 
+$color_back_kid: #01154c; //#0C1A3F; // background for kids 
 $color_back_parent: #E4E4E4; // background for parents
 $color_dark_grey: #777B88; // darker than back_parent
 $color_light_grey: #F5F5F5; // lighter than back_parent
