próba odsunięcia tła o 300px

--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -6,7 +6,7 @@
 // //body.kid{background: $color_back_kid url(../assets/back_circles.svg) top center no-repeat; background-size: 100%;}
 // body.parent{background-color: $color_back_parent;}
 
-html{background: $color_back_kid url(../assets/background.svg) top 70% center no-repeat; background-size: 100%;}
+html{background: $color_back_kid url(../assets/background.svg) top 300px center no-repeat; background-size: 100%;}
 
 html {
 	height: 100%;
