--- a/sass/__background.scss
+++ b/sass/__background.scss
@@ -10,16 +10,24 @@ body.kid{
 	.circles{background-color: transparentize(lighten($color_back_kid,15%),0.5)}
 
 	&.title-page {
-		.circle1 {background-color: $color_wait;}
-		.circle2 {background-color: mix($color_wait, $color_done)}
-		.circle3 {background-color:  $color_done;}
-		.circle4 {background-color:  lighten(mix($color_base,$color_done),15%);}
-		.circle5 {background-color:  lighten($color_base,15%);}
-		.circle6 {background-color:  $color_base;}
-		.circle7 {background-color:  mix($color_base, $color_back_kid,40%);}
-		.circle8 {background-color: $color_done;}
-		.circle9 {background-color: $color_undone;}
-		.circle10 {background-color: $color_base;}
+		.circle1 {background-color: mix($color_base, $color_back_kid,60%);}
+		.circle2 {background-color: mix($color_base, $color_back_kid,50%);}
+		.circle3 {background-color:  mix($color_base, $color_back_kid,40%);}
+		.circle4 {background-color:  mix($color_base, $color_back_kid,50%);}
+		.circle5 {background-color:  mix($color_base, $color_back_kid,30%);}
+		.circle6 {background-color:  mix($color_base, $color_back_kid,20%);}
+		.circle7 {background-color:  mix($color_base, $color_back_kid,10%);}
+
+		// .circle1 {background-color: $color_wait;}
+		// .circle2 {background-color: mix($color_wait, $color_done)}
+		// .circle3 {background-color:  $color_done;}
+		// .circle4 {background-color:  lighten(mix($color_base,$color_done),15%);}
+		// .circle5 {background-color:  lighten($color_base,15%);}
+		// .circle6 {background-color:  $color_base;}
+		// .circle7 {background-color:  mix($color_base, $color_back_kid,40%);}
+		// .circle8 {background-color: $color_done;}
+		// .circle9 {background-color: $color_undone;}
+		// .circle10 {background-color: $color_base;}
 	}
 }
 
@@ -27,7 +35,7 @@ body.parent{
 	.circles{background-color: transparentize(darken($color_back_parent,15%),0.5)};
 
 	&.title-page {
-		background-color: darken($color_back_parent,30%);
+		// background-color: darken($color_back_parent,30%);
 		.circle1 {background-color: mix($color_back_parent, $color_base,70%)};
 		.circle2 {background-color: mix($color_back_parent, $color_base,60%)};
 		.circle3 {background-color: mix($color_back_parent, $color_base,50%)};
