--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -6,7 +6,9 @@
 // //body.kid{background: $color_back_kid url(../assets/back_circles.svg) top center no-repeat; background-size: 100%;}
 // body.parent{background-color: $color_back_parent;}
 
-html{background: $color_back_kid url(../assets/background.svg) top 200px center no-repeat; background-size: 100%;}
+html.background-kid-title{background: $color_back_kid url(../assets/background.svg) top 200px center no-repeat; background-size: 100%;}
+html.background-parent-title{background: darken($color_back_parent,30%) url(../assets/background_parent.svg) top 200px center no-repeat; background-size: 100%;}
+html.background-kid{background: $color_back_kid url(../assets/background_kid.svg) top 200px center no-repeat; background-size: 100%;}
 
 html {
 	height: 100%;
