--- a/sass/_rodzic_menu.scss
+++ b/sass/_rodzic_menu.scss
@@ -10,7 +10,7 @@
     text-align: center;
     border-radius: 2rem;
     cursor: pointer;
-    background-color: white;
+    background-color: transparentize(white,0.2);
 
 }
 
