--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -2,7 +2,7 @@
 @import '_zmienne';
 
 html.background-parent{
-	background: $color_back_parent url(../assets/background_parent.svg) bottom center no-repeat;
+	background: $color_back_parent url(../assets/background_parent.svg) top 275px center no-repeat;
 	background-attachment: fixed;
 	background-size: 100%;
 }
@@ -12,7 +12,7 @@ html.background-parent-title{
 	background-size: 100%;
 }
 html.background-kid{
-	background: $color_back_kid url(../assets/background_kid.svg) bottom center no-repeat;
+	background: $color_back_kid url(../assets/background_kid.svg) top 275px center no-repeat;
 	background-attachment: fixed;
 	background-size: 100%;
 }
