poprawione nagrody u dziecka

--- a/sass/_circles.scss
+++ b/sass/_circles.scss
@@ -83,7 +83,7 @@ li.circle-big {
 }
 
 //space for name of mission
-.mission-neutral li.circle-big {margin: 4.0rem 4% $font_mid_size*5 4%; border-width: 5px;}
+.mission-neutral li.circle-big {margin: 4.0rem 4% $font_mid_size*5 4%; }
 
 
 li.circle-mid {
