--- a/sass/_dziecko_nagrody.scss
+++ b/sass/_dziecko_nagrody.scss
@@ -3,10 +3,10 @@
 li.circle-big{
     display:block;
     position: relative;
-    margin: 10rem;
+    // margin: 10rem;
     p{
         position: absolute;
-        left: 2*$mission_big_size;
+        left: 1.5*$mission_big_size;
         top: 0;
         display: block;
         width: 60.0rem;
@@ -16,7 +16,7 @@ li.circle-big{
     .progress{
         width: 60.0rem;
         position: absolute;
-        left: 2*$mission_big_size;
+        left: 1.5*$mission_big_size;
         top: 8.0rem;
         margin: 0;
         img.img-right{
