Dodana strona Bohater dla dziecka, dodany folder ikony ze wszystkimi ikonami, ujednolicone nazewnictwo ikon

--- a/sass/styl.scss
+++ b/sass/styl.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import '_zmienne';
+@import '_bohater';
 
 html.background-parent{
 	background: $color_back_parent url(../assets/background_parent.svg) top 275px center no-repeat;
